# surgical-video-assistant

./: .gitignore  README.md  modal_gradio_demo.py  pyproject.toml  requirements-train.txt  requirements.txt
configs/: gemma4_12b_lora_hf_demo.yaml  gemma4_12b_lora_phase_balanced.yaml  gemma4_12b_lora_phase_balanced_strong.yaml  gemma4_12b_lora_quick.yaml  gemma4_12b_lora_sft.yaml  gemma4_12b_lora_tiny.yaml  gemma4_12b_lora_video_subset.yaml  gemma4_12b_zero_shot.yaml  gemma4_26b_lora_sft.yaml  gemma4_26b_zero_shot.yaml  gemma4_few_shot.yaml  gemma4_lora_sft.yaml  gemma4_zero_shot.yaml  mock_zero_shot.yaml
data/processed/: processed_dataset.example.jsonl
huggingface/: README.md
notebooks/: CLONE_CELL.md  Surgical_Video_Assistant_Training.ipynb
reports/: benchmark_comparison.md  demo_cases.json  report.md  training_summary.md
reports/calibration/: calibration_summary.json  lora_fixed_calibration.json  zeroshot_fixed_calibration.json
reports/eval_full_phase_lora_fixed/: metrics_lora12b_phase_full_fixed.json  topk_lora_fixed.json
reports/eval_full_phase_zeroshot_fixed/: metrics_gemma4_12b_zeroshot_phase_full_fixed.json  topk_zeroshot_fixed.json
reports/final/: final_report.md  metrics_lora12b_phase_300_vid01_04_13.json  (+4 more)
scripts/: build_presentation_artifacts.py  compare_benchmarks.py  download_hf_dataset.py  download_ssg_vqa.py  make_fast_subset.py  make_training_report.py  predict_eval_lora.py  predict_eval_zeroshot.py  predict_lora.py  preflight_train.py  prepare_demo_frames.py  publish_to_github.py
src/: __init__.py
src/data/: __init__.py  cholec.py  io.py  (+4 more)
tests/: test_answer_space.py  test_cholec_native.py  test_cholec_phase_canonical.py  test_eval_metrics.py  test_make_fast_subset.py  test_prepare_splits.py  test_ssg_vqa_parser.py  test_surgmllmbench_parser.py
(+10 files in other folders)
