[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "surgical-video-assistant"
version = "0.1.0"
description = "Frame-level surgical VQA, phase recognition, and tool/action benchmarking with Gemma-style multimodal prompting."
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "torch>=2.2.0",
  "transformers>=5.10.1",
  "accelerate>=0.30.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.3",
  "huggingface_hub>=0.24.0",
  "sentencepiece>=0.2.0",
  "protobuf>=4.25.3",
  "matplotlib>=3.8.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.35.0"]
hf = ["torch>=2.2.0", "transformers>=5.10.1", "accelerate>=0.30.0"]
dev = ["pytest>=8.0.0"]
train = [
  "peft>=0.11.0",
  "trl>=0.9.6",
  "bitsandbytes>=0.43.0",
  "tensorboard>=2.16.0",
  "torchvision>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
